crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshots__analysis_jsonld_minimal.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshots.rs
assertion_line: 318
expression: rendered
---
{
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeLines": 0,
  "commentCount": 0,
  "fileSize": 0,
  "interactionStatistic": {
    "@type": "InteractionCounter",
    "interactionType": "http://schema.org/ReadAction",
    "userInteractionCount": 0
  },
  "lineCount": 0,
  "name": "."
}
