crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshots__analysis_md_minimal.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshots.rs
assertion_line: 235
expression: rendered
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
